packages/circuit-ui/components/AutocompleteInput/components/ComboboxInput/ComboboxInput.module.css
.base {
  position: relative;
  display: inline-flex;
  flex-wrap: wrap;
  gap: var(--cui-spacings-byte);
  width: 100%;
  max-height: 200px;
  overflow-y: auto;
  background-color: var(--cui-bg-normal);
  border: 1px solid var(--cui-border-normal);
  transition:
    box-shadow var(--cui-transitions-default),
    border var(--cui-transitions-default);
}

.base input {
  width: 100%;
  padding: 0 var(--cui-spacings-tera) 0 0;
  margin: 0;
  appearance: none;
  outline: 0;
  background-color: transparent;
  border: none;
  box-shadow: none;
}

.base:hover {
  border: 1px solid var(--cui-border-normal-hovered);
}

.base:focus-within {
  border: 1px solid var(--cui-border-accent);
  box-shadow: inset 0 0 0 1px var(--cui-border-accent);
}

.base input::placeholder {
  color: var(--cui-fg-placeholder);
  transition: color var(--cui-transitions-default);
}

.base:placeholder-shown {
  text-overflow: ellipsis;
}

/* Validations */

.invalid {
  border: 1px solid var(--cui-border-danger);
}

.invalid:hover {
  border: 1px solid var(--cui-border-danger-hovered);
}

.invalid:focus-within {
  border: 1px solid var(--cui-border-danger);
  box-shadow: inset 0 0 0 1px var(--cui-border-danger);
}

.warning {
  border: 1px solid var(--cui-border-warning);
}

.warning:hover {
  border: 1px solid var(--cui-border-warning-hovered);
}

.warning:focus-within {
  border: 1px solid var(--cui-border-warning);
  box-shadow: inset 0 0 0 1px var(--cui-border-warning);
}

/* Disabled */
.disabled,
.disabled-tag > div {
  color: var(--cui-fg-normal-disabled);
  background-color: var(--cui-bg-normal-disabled);
  border: 1px solid var(--cui-border-normal-disabled);
}

.readonly {
  background-color: var(--cui-bg-subtle-disabled);
}

.base input::-webkit-search-decoration,
.base input::-webkit-search-cancel-button,
.base input::-webkit-search-results-button,
.base input::-webkit-search-results-decoration {
  appearance: none;
}

/* Alignment */

.align-right {
  text-align: right;
}

.clear {
  position: absolute;
  color: var(--cui-fg-subtle);
}

@media (max-width: 479px) {
  .base {
    max-height: 150px;
    overflow-y: auto;
  }
}

/* Sizes */

/* s */

.s {
  padding: var(--field-input-padding-block) var(--field-input-padding-inline);
  border-radius: var(--field-input-border-radius);
}

.s input {
  font-size: var(--field-input-font-size);
  line-height: var(--field-input-line-height);
}

.s .clear {
  right: var(--cui-spacings-bit);
  bottom: 0;
}

/* m */

.m {
  padding: var(--field-input-padding-block) var(--field-input-padding-inline);
  border-radius: var(--field-input-border-radius);
}

.m input {
  font-size: var(--field-input-font-size);
  line-height: var(--field-input-line-height);
}

.m .clear {
  right: var(--cui-spacings-byte);
  bottom: var(--cui-spacings-byte);
}

